Closed
Bug 306304
Opened 21 years ago
Closed 21 years ago
If bookmarks.bak is missing , all bookmarks are overwritten by the default bookmarks
Categories
(Firefox :: Bookmarks & History, defect, P1)
Tracking
()
RESOLVED
FIXED
Firefox1.5
People
(Reporter: broedli, Assigned: benjamin)
References
Details
(Keywords: dataloss, fixed1.8, regression)
Attachments
(1 file)
|
1.36 KB,
patch
|
neil
:
review+
asa
:
approval1.8b4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; de-DE; rv:1.7.10) Gecko/20050725 Firefox/1.0.4 (Ubuntu package 1.0.6)
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b4) Gecko/20050829 Firefox/1.0+ ID:2005082901
You can't restore bookmarks by copying bookmarks.html from a old profile into a
new one.
Reproducible: Always
Steps to Reproduce:
1. close all FF instances
2. go to profile
3. delete bookmarks.bak
4. open Firefox
5. open bookmarks, all bookmarks are replaced by the default bookmarks
Expected Results:
FF builds a new bookmarks.bak out of the current bookmarks.html.
Tested with Linux (Ubuntu 5.04, firefox-1.0+.en-US.linux-i686.tar.gz)
This regressed between 2005080805 and 2005080905, so i suppose it's a regression
by Bug 298943 (if bookmarks.html is missing , bookmark.bak is not copied to
bookmarks.html).
To restore bookmarks you must copy over bookmarks.html and bookmarks.bak.
I think this problem is related to the bug described above:
1. close all FF instances
2. go to profile
3. replace bookmarks.html by a new bookmarks.html (different content)
4. open Firefox
5. open bookmarks, bookmarks are restored out of the bookmarks in bookmarks.bak
(expected: new bookmarks.bak out of the current bookmarks.html after closing)
6. sometimes the bookmarkfile (out of bookmarks.bak) is corrupted:
-bookmarks with umlauts are changed
before: ID="rdf:#$kFkEX3">TESTTEST-öööüüüäää-TESTTEST</A>
after: ID="rdf:#$kFkEX3">TESTTEST-öööüüüäää-TESTTEST</A>
-bookmarks are missing
With a Windows-build (Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4)
Gecko/20050828 Firefox/1.0+ ID:2005082823), i can't reproduce the two problems.
Comment 1•21 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b4) Gecko/20050829
Firefox/1.0+ ID:2005082912
WFM
Comment 2•21 years ago
|
||
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20050827 Firefox/1.6a1
ID:2005082708
Confirming. Moving this back to Severity: Normal, seeing as how a user would
need to purposefully delete bookmarks.bak for this to happen.
Severity: critical → normal
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Updated•21 years ago
|
Depends on: 298943
Keywords: regression
Updated•21 years ago
|
Flags: blocking1.8b4?
| Assignee | ||
Comment 3•21 years ago
|
||
That looks like a pretty stupid typo to me.
Assignee: nobody → benjamin
Status: NEW → ASSIGNED
Attachment #194233 -
Flags: review?(neil.parkwaycc.co.uk)
| Assignee | ||
Updated•21 years ago
|
Flags: blocking1.8b4? → blocking1.8b4+
| Assignee | ||
Updated•21 years ago
|
Priority: -- → P1
Target Milestone: --- → Firefox1.5
Comment 4•21 years ago
|
||
Comment on attachment 194233 [details] [diff] [review]
Whoops
I'll agree that it's a stupid typo - file->Exists always succeeds as far as I'm
concerned.
Attachment #194233 -
Flags: review?(neil.parkwaycc.co.uk) → review+
Updated•21 years ago
|
Attachment #194233 -
Flags: approval1.8b4+
| Assignee | ||
Comment 5•21 years ago
|
||
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Whiteboard: fixed on trunk, needs 1.8 branch landing
| Assignee | ||
Comment 6•21 years ago
|
||
Committed on 1.8 branch.
Keywords: fixed1.8
Whiteboard: fixed on trunk, needs 1.8 branch landing
You need to log in
before you can comment on or make changes to this bug.
Description
•