Bug 306304 - if bookmarks.bak does not exist, all bookmarks are overwritten by the default bookmarks - r=neil